force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/COMM_CustomerSynchronizationMapping__mdt.object-meta.xml
<CustomObject>
    <description>Used to support Customer Data integration between Salesforce Core and Salesforce Commerce Cloud by defining the field mapping.</description>
    <label>Customer Synchronization Mapping</label>
    <pluralLabel>Customer Synchronization Mappings</pluralLabel>
</CustomObject>