force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/fields/COMM_AddressMapping__c.field-meta.xml
<CustomField>
    <fullName>COMM_AddressMapping__c</fullName>
    <description>Indicates if mapping if for a field in an address (inner object in request)</description>
    <label>Address Mapping</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMM_BILLING</fullName>
                <default>true</default>
                <label>COMM_BILLING</label>
            </value>
            <value>
                <fullName>COMM_BILLING_COMPANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>