force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/fields/COMM_CommerceApiFieldName__c.field-meta.xml
<CustomField>
    <fullName>COMM_CommerceApiFieldName__c</fullName>
    <description>Field to store Salesforce Commerce Cloud API field for mapping.</description>
    <label>Commerce API Field Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>