force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/fields/COMM_CoreApiFieldName__c.field-meta.xml
<CustomField>
    <fullName>COMM_CoreApiFieldName__c</fullName>
    <description>Field to store Salesforce Core field API name for mapping.</description>
    <label>Core API Field Name</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
</CustomField>