force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/fields/COMM_CoreApiObjectName__c.field-meta.xml
<CustomField>
    <fullName>COMM_CoreApiObjectName__c</fullName>
    <description>Field to store Salesforce Core SObject API name for mapping.</description>
    <label>Core API SObject Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>