force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/fields/COMM_IsObjectField__c.field-meta.xml
<CustomField>
    <fullName>COMM_IsObjectField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that mapped field belongs to an inner JSON object and must be
        serialized.</description>
    <inlineHelpText>Check if mapping corresponds to fields inside a JSON inner object.</inlineHelpText>
    <label>Is Object Field</label>
    <type>Checkbox</type>
</CustomField>