force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/fields/COMM_MappingForB2C__c.field-meta.xml
<CustomField>
    <fullName>COMM_MappingForB2C__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if mapping is applied when client is B2C</description>
    <label>Mapping for B2C</label>
    <type>Checkbox</type>
</CustomField>