force-app/main/default/objects/COMM_CustomerSynchronizationMapping__mdt/listViews/COMM_LV_All.listView-meta.xml
<ListView>
    <fullName>COMM_LV_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>COMM_CommerceApiFieldName__c</columns>
    <columns>COMM_CoreApiObjectName__c</columns>
    <columns>COMM_CoreApiFieldName__c</columns>
    <columns>COMM_MappingForB2C__c</columns>
    <columns>COMM_AddressMapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>